--- a/css/responsive.css
+++ b/css/responsive.css
@@ -108,6 +108,6 @@
 		clear: both;
 		max-width: 45%;
 		border: 1px solid #800000;
-		margin: 0 auto 100px;
+		margin: 0 auto 124px;
 	}
 }
